force-app/main/default/objects/Assessment__c/Assessment__c.object-meta.xml
<CustomObject>
    <description>[Animal Shelter Starter] used to capture the health assessment of an animal at entry and at regular intervals</description>
    <label>Assessment</label>
    <nameField>
        <displayFormat>ASSESS{000000}</displayFormat>
        <label>Assessment Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>