force-app/main/default/objects/Assessment__c/fields/Animal__c.field-meta.xml
<CustomField>
    <fullName>Animal__c</fullName>
    <label>Animal</label>
    <referenceTo>Animal__c</referenceTo>
    <relationshipLabel>Assessments</relationshipLabel>
    <relationshipName>Assessments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>