force-app/main/default/objects/Assessment__c/fields/Appetite__c.field-meta.xml
<CustomField>
    <fullName>Appetite__c</fullName>
    <inlineHelpText>What is the animals appetite</inlineHelpText>
    <label>Appetite</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Healthy</fullName>
            </value>
            <value>
                <fullName>Trying to Eat</fullName>
            </value>
            <value>
                <fullName>Not Eating</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>