force-app/main/default/objects/Assessment__c/fields/Assessment_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Date_Time__c</fullName>
    <defaultValue>Now()</defaultValue>
    <inlineHelpText>Date and Time of assessment</inlineHelpText>
    <label>Assessment Date/Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>