force-app/main/default/objects/Assessment__c/fields/Assessment_Type__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Type__c</fullName>
    <label>Assessment Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entry</fullName>
            </value>
            <value>
                <fullName>Follow Up</fullName>
            </value>
            <value>
                <fullName>Exit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>