force-app/main/default/objects/Assessment__c/fields/Behaviour_Aggressive__c.field-meta.xml
<CustomField>
    <fullName>Behaviour_Aggressive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates that the animal shows aggressive behaviour</inlineHelpText>
    <label>Aggressive</label>
    <type>Checkbox</type>
</CustomField>