force-app/main/default/objects/Assessment__c/fields/Behaviour_Anxious__c.field-meta.xml
<CustomField>
    <fullName>Behaviour_Anxious__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates whether the animal display anxiety</inlineHelpText>
    <label>Anxious</label>
    <type>Checkbox</type>
</CustomField>