force-app/main/default/objects/Assessment__c/fields/Behaviour_Good_with_Children__c.field-meta.xml
<CustomField>
    <fullName>Behaviour_Good_with_Children__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates that the animal is good with children</inlineHelpText>
    <label>Good with Children</label>
    <type>Checkbox</type>
</CustomField>