force-app/main/default/objects/Assessment__c/fields/Behaviour_Good_with_other_animals__c.field-meta.xml
<CustomField>
    <fullName>Behaviour_Good_with_other_animals__c</fullName>
    <label>Good with other animals</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes - Same Species Only</fullName>
            </value>
            <value>
                <fullName>Yes - Any Species</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>