force-app/main/default/objects/Assessment__c/fields/Behaviour_Pulls_on_Lead__c.field-meta.xml
<CustomField>
    <fullName>Behaviour_Pulls_on_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pulls on Lead</label>
    <type>Checkbox</type>
</CustomField>