force-app/main/default/objects/Assessment__c/fields/Behaviour_Recall_Level__c.field-meta.xml
<CustomField>
    <fullName>Behaviour_Recall_Level__c</fullName>
    <label>Recall Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Bad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>