force-app/main/default/objects/Assessment__c/fields/Behaviour_Resource_Guarding__c.field-meta.xml
<CustomField>
    <fullName>Behaviour_Resource_Guarding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resource Guarding</label>
    <type>Checkbox</type>
</CustomField>