force-app/main/default/objects/Assessment__c/fields/Behaviour_s__c.field-meta.xml
<CustomField>
    <fullName>Behaviour_s__c</fullName>
    <label>Behaviour(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Animal_Behaviours</valueSetName>
    </valueSet>
</CustomField>