force-app/main/default/objects/Assessment__c/fields/Behaviour_Separation_Anxiety__c.field-meta.xml
<CustomField>
    <fullName>Behaviour_Separation_Anxiety__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Separation Anxiety</label>
    <type>Checkbox</type>
</CustomField>