force-app/main/default/objects/Assessment__c/fields/Breathing__c.field-meta.xml
<CustomField>
    <fullName>Breathing__c</fullName>
    <inlineHelpText>What is the condition of the animals breathing</inlineHelpText>
    <label>Breathing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Shallow</fullName>
            </value>
            <value>
                <fullName>Rapid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>