force-app/main/default/objects/Assessment__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <inlineHelpText>Choose whether the assessment covers health, behaviour or both</inlineHelpText>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Behaviour</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>