force-app/main/default/objects/Assessment__c/fields/Coughing__c.field-meta.xml
<CustomField>
    <fullName>Coughing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does the animal present with a cough?</inlineHelpText>
    <label>Coughing</label>
    <type>Checkbox</type>
</CustomField>