force-app/main/default/objects/Assessment__c/fields/Faceas__c.field-meta.xml
<CustomField>
    <fullName>Faceas__c</fullName>
    <inlineHelpText>Condition of the animals faceas</inlineHelpText>
    <label>Faceas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Conditions</valueSetName>
    </valueSet>
</CustomField>