force-app/main/default/objects/Assessment__c/fields/Fleas__c.field-meta.xml
<CustomField>
    <fullName>Fleas__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Evidence of fleas?</inlineHelpText>
    <label>Fleas</label>
    <type>Checkbox</type>
</CustomField>