force-app/main/default/objects/Assessment__c/fields/Flys__c.field-meta.xml
<CustomField>
    <fullName>Flys__c</fullName>
    <inlineHelpText>If evidence of flys, then what type</inlineHelpText>
    <label>Flys</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Eggs</fullName>
            </value>
            <value>
                <fullName>New born maggots</fullName>
            </value>
            <value>
                <fullName>Adult maggots</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>