force-app/main/default/objects/Assessment__c/fields/Fur_Condition__c.field-meta.xml
<CustomField>
    <fullName>Fur_Condition__c</fullName>
    <inlineHelpText>What is the condition of the fur</inlineHelpText>
    <label>Fur Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Conditions</valueSetName>
    </valueSet>
</CustomField>