force-app/main/default/objects/Assessment__c/fields/Has_ability_to_curl__c.field-meta.xml
<CustomField>
    <fullName>Has_ability_to_curl__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does the animal have the ability to curl (if applicable)</inlineHelpText>
    <label>Has ability to curl?</label>
    <type>Checkbox</type>
</CustomField>