force-app/main/default/objects/Assessment__c/fields/Hearing_Ears__c.field-meta.xml
<CustomField>
    <fullName>Hearing_Ears__c</fullName>
    <inlineHelpText>What is the condition of hearing/ears</inlineHelpText>
    <label>Hearing/Ears</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Conditions</valueSetName>
    </valueSet>
</CustomField>