force-app/main/default/objects/Assessment__c/fields/Hydration_Level__c.field-meta.xml
<CustomField>
    <fullName>Hydration_Level__c</fullName>
    <inlineHelpText>What is the level of hydration</inlineHelpText>
    <label>Hydration Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Dehydrated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>