force-app/main/default/objects/Assessment__c/fields/Left_Front_Limb__c.field-meta.xml
<CustomField>
    <fullName>Left_Front_Limb__c</fullName>
    <inlineHelpText>Condition of left front limb</inlineHelpText>
    <label>Left Front Limb</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Conditions</valueSetName>
    </valueSet>
</CustomField>