force-app/main/default/objects/Assessment__c/fields/Left_Hind_Limb__c.field-meta.xml
<CustomField>
    <fullName>Left_Hind_Limb__c</fullName>
    <inlineHelpText>Condition of left hind limb</inlineHelpText>
    <label>Left Hind Limb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>