force-app/main/default/objects/Assessment__c/fields/Lungworm__c.field-meta.xml
<CustomField>
    <fullName>Lungworm__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Evidence of lungworm</inlineHelpText>
    <label>Lungworm</label>
    <type>Checkbox</type>
</CustomField>