force-app/main/default/objects/Assessment__c/fields/Mange__c.field-meta.xml
<CustomField>
    <fullName>Mange__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Evidence of mange</inlineHelpText>
    <label>Mange</label>
    <type>Checkbox</type>
</CustomField>