force-app/main/default/objects/Assessment__c/fields/Mouth_Airway__c.field-meta.xml
<CustomField>
    <fullName>Mouth_Airway__c</fullName>
    <inlineHelpText>What is the condition of mouth/airway</inlineHelpText>
    <label>Mouth/Airway</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Poor</fullName>
            </value>
            <value>
                <fullName>Clear</fullName>
            </value>
            <value>
                <fullName>Needs Treatment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>