force-app/main/default/objects/Assessment__c/fields/Movement_Condition__c.field-meta.xml
<CustomField>
    <fullName>Movement_Condition__c</fullName>
    <inlineHelpText>Condition of the animal&apos;s movement</inlineHelpText>
    <label>Movement Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Unsteady</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>