force-app/main/default/objects/Assessment__c/fields/Right_Front_Limb__c.field-meta.xml
<CustomField>
    <fullName>Right_Front_Limb__c</fullName>
    <inlineHelpText>Condition of right front limb</inlineHelpText>
    <label>Right Front Limb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>