force-app/main/default/objects/Assessment__c/fields/Right_Hind_Limb__c.field-meta.xml
<CustomField>
    <fullName>Right_Hind_Limb__c</fullName>
    <inlineHelpText>Condition of right hind limb</inlineHelpText>
    <label>Right Hind Limb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>