force-app/main/default/objects/Assessment__c/fields/Ringworm__c.field-meta.xml
<CustomField>
    <fullName>Ringworm__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Evidence of Ringworm?</inlineHelpText>
    <label>Ringworm</label>
    <type>Checkbox</type>
</CustomField>