force-app/main/default/objects/Assessment__c/fields/Sight_Eyes__c.field-meta.xml
<CustomField>
    <fullName>Sight_Eyes__c</fullName>
    <inlineHelpText>Condition of eyes and sight</inlineHelpText>
    <label>Sight/Eyes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>