force-app/main/default/objects/Assessment__c/fields/Skin_Condition__c.field-meta.xml
<CustomField>
    <fullName>Skin_Condition__c</fullName>
    <inlineHelpText>What is the condition of the skin</inlineHelpText>
    <label>Skin Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>