force-app/main/default/objects/Assessment__c/fields/Spine_Condition__c.field-meta.xml
<CustomField>
    <fullName>Spine_Condition__c</fullName>
    <inlineHelpText>What is the condition of the spines</inlineHelpText>
    <label>Spine Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Conditions</valueSetName>
    </valueSet>
</CustomField>