force-app/main/default/objects/Assessment__c/fields/Ticks__c.field-meta.xml
<CustomField>
    <fullName>Ticks__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Evidence of Ticks</inlineHelpText>
    <label>Ticks</label>
    <type>Checkbox</type>
</CustomField>