force-app/main/default/objects/Assessment__c/fields/Wings__c.field-meta.xml
<CustomField>
    <fullName>Wings__c</fullName>
    <inlineHelpText>Condition of the wings</inlineHelpText>
    <label>Wings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>